# service-template

./: Dockerfile  README.md  cli  cookiecutter.json
api/: app.py  app_name.py  constants.py  logger.py  secrets.py
api/database/: sql.py  types.py
api/logic/: dynamic_media.py
api/routers/: dynamic_media.py
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cli  create-database.sql  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt
{{cookiecutter.project_name}}/.github/workflows/: pre-commit.yml
{{cookiecutter.project_name}}/api/: app.py  common.py  constants.py  logger.py  secrets.py  times.py  tokens.py  version.py
{{cookiecutter.project_name}}/api/database/: sql.py  types.py
{{cookiecutter.project_name}}/api/logic/: dynamic_media.py
{{cookiecutter.project_name}}/api/routers/: dynamic_media.py
{{cookiecutter.project_name}}/static/: index.html
{{cookiecutter.project_name}}/tests/: conftest.py  test_dynamic_media.py
