[project]
#name = "{{cookiecutter.project_name}}"
#version = "{{cookiecutter.version}}"
name = "service-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "bandit>=1.9.2",
    "black>=25.11.0",
    "cruft>=2.16.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "prek>=0.2.19",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-vcr>=1.0.2",
    "ruff>=0.14.6",
    "ty>=0.0.1a28",
    "types-pyyaml>=6.0.12.20250915",
    "vcrpy>=7.0.0",
    "watchdog>=6.0.0",
]
